<resources>
    <string name="app_name">FavouriteMeal</string>
    <string name="delete">delete</string>
    <string name="my_favourite_meal">My Favourite Meal</string>
    <string name="restaruant">restaruant</string>
    <string name="meal_image">meal image</string>
    <string name="img">img</string>
    <string name="admobid">ca-app-pub-3940256099942544~3347511713</string>
    <string name="unitid">ca-app-pub-3940256099942544/6300978111</string>
    <string name="copyright">Copyright Udacity 2019</string>
    <string name="fail">Fail</string>
    <string name="blanks">Fill All Blanks</string>
    <string name="no_data_available">No Data Available</string>
    <string name="no_favourite_list_avaliable">No Favourite List Avaliable</string>
    <string name="appwidget_text">The Last Meal</string>
    <string name="add_widget">Add widget</string>
    <string name="resturant_name">Resturant Name</string>
    <string name="meal_name">Meal Name</string>
    <string name="address">Address</string>
    <string name="details_of_its_meal">Details Of Its Meal</string>
    <string name="add_new_meal">add new meal</string>
    <string name="add_image">add image</string>
    <string name="like">like</string>
    <string name="post">Post</string>
    <string name="post_meal">post meal</string>
    <string name="required">this is field is required</string>
    <string name="re_pass">The Password doesn\'t match</string>
</resources>
