<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="6dp"
    android:padding="5dp"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/meal_image"
            android:src="@drawable/fried"
            android:transitionName="@string/img"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/rest_name"
            style="@style/text"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/img"
            android:layout_toRightOf="@id/img"
            android:fontFamily="@font/cairo_bold"
            android:text="Pizza hot"
            android:transitionName="@string/restaruant" />

        <TextView
            android:id="@+id/meal_type"
            style="@style/text"
            android:layout_below="@id/rest_name"
            android:layout_toEndOf="@id/img"
            android:layout_toRightOf="@id/img"
            android:fontFamily="@font/cairo_regular"
            android:text="Pizza margiritta"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/address"
            style="@style/text"
            android:layout_below="@id/meal_type"
            android:layout_toEndOf="@id/img"
            android:layout_toRightOf="@id/img"
            android:fontFamily="@font/cairo_regular"
            android:text="90 st , Miami , Usa"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/desc"
            style="@style/text"
            android:layout_below="@id/address"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/img"
            android:layout_toRightOf="@id/img"
            android:fontFamily="@font/cairo_regular"
            android:maxLines="1"
            android:text="this is meal is very delicious ......."
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/delete"
            android:padding="8dp"
            android:src="@drawable/delete" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>